--- a/style.css
+++ b/style.css
@@ -2,38 +2,51 @@
     --primary-color: #142738;
     --paragraph-color:#ca1444;
     --heading-color:#f4436f;
+    --white-color:#ffffff;
+    --black-color:#000000;
     
+}
+
+body{
+    margin: 0 auto;
+    display: block;
+    max-width: 1200px;
 }
 
 *{
-    margin: 0 auto;
-    padding: 0;
-    font-family: "Raleway";
+    font-family: "Urbanist", sans-serif;
+    background-color: var(--black-color);
 }
 
-section{
-    background-image: url(./img/imghd.webp);
+.section-texto{
+    background-image: url(./img/pexels-pixabay-38570.jpg);
     background-size: cover;
     height: 100vh;
+    /* margin: 40px; */
     
 }
-
-
 
 .nav-links a{
     margin-right: 90px;
     text-decoration: none;
-    font-family: "Raleway";
     
 }
 
 .description{
-    font-family: "Raleway";
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
+    color: var(--white-color);
+    
+
 
     & p{
-        font-size: 20px;
+        font-size: 22px;
+        margin-top: 5px;
+        margin-bottom: 24px;
+    }
+
+    & span{
+        color: var(--heading-color);
     }
 }
 
@@ -44,6 +57,44 @@ section{
     }
 }
 
-.img-logo{
-    font-size: 10px;
+.navbar-logo{
+    display: inline-block;
+    vertical-align: middle;
+    width: 70px;
+    }
+.navbar-logo img{
+    display: block;
+    width: 100%;
+    height: auto;
+    }
+
+.nav-bar-main{
+    background-color: var(--black-color);
+    padding: 20px;
+    
+    border: 1px solid var(--black-color);
+    & a{
+        text-decoration: none;
+        color: var(--white-color);
+        margin: 19px;
+        font-size: 22px;
+    }
+    & ul{
+        background-color: var(--black-color);
+        box-shadow: 2px 2px 2px 2px var(--primary-color);
+        text-align: center;
+        justify-content: center;
+        justify-content: space-between;
+    }
+}
+/* 
+.nav-bar-main:hover{
+    
+
+} */
+
+.anton-regular .description{
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
